--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,8 +12,8 @@
     "com.unity.inputsystem": "1.0.0",
     "com.unity.recorder": "2.1.0-preview.1",
     "com.unity.render-pipelines.universal": "8.2.0",
-    "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "3.0.0-preview.1",
+    "com.unity.test-framework": "1.1.16",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.timeline": "1.2.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
